2010-05-14  Leon Clarke  <leonclarke@google.com>

Reviewed by Steve Block.

        Refactor signature of tokenizeRelAttribute and the variables it refers to so that new features don't keep changing the signature, and make m_disabledState into an enum.
        https://bugs.webkit.org/show_bug.cgi?id=38900

        No new tests. Refactoring only.

        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::HTMLLinkElement):
        (WebCore::HTMLLinkElement::setDisabledState):
        (WebCore::HTMLLinkElement::parseMappedAttribute):
        (WebCore::HTMLLinkElement::tokenizeRelAttribute):
        (WebCore::HTMLLinkElement::process):
        (WebCore::HTMLLinkElement::addSubresourceAttributeURLs):
        * html/HTMLLinkElement.h:
        (WebCore::HTMLLinkElement::RelAttribute::RelAttribute):
        (WebCore::HTMLLinkElement::isAlternate):
        (WebCore::HTMLLinkElement::isDisabled):
        (WebCore::HTMLLinkElement::isEnabledViaScript):
        (WebCore::HTMLLinkElement::isIcon):
        (WebCore::HTMLLinkElement::):
        * html/PreloadScanner.cpp:
        (WebCore::PreloadScanner::processAttribute):

Canonical link: https://commits.webkit.org/50655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59511 268f45cc-cd09-0410-ab3c-d52691b4dbfc