WebCore/html/HTMLLinkElement.cpp
@@ -49,12 +49,8 @@ using namespace HTMLNames;
 HTMLLinkElement::HTMLLinkElement(const QualifiedName& qName, Document *doc, bool createdByParser)
     : HTMLElement(qName, doc)
     , m_cachedSheet(0)
-    , m_disabledState(0)
+    , m_disabledState(Unset)
     , m_loading(false)
-    , m_alternate(false)
-    , m_isStyleSheet(false)
-    , m_isIcon(false)
-    , m_isDNSPrefetch(false)
     , m_createdByParser(createdByParser)
 {
     ASSERT(hasTagName(linkTag));
@@ -71,8 +67,8 @@ HTMLLinkElement::~HTMLLinkElement()
 
 void HTMLLinkElement::setDisabledState(bool _disabled)
 {
-    int oldDisabledState = m_disabledState;
-    m_disabledState = _disabled ? 2 : 1;
+    DisabledState oldDisabledState = m_disabledState;
+    m_disabledState = _disabled ? Disabled : EnabledViaScript;
     if (oldDisabledState != m_disabledState) {
         // If we change the disabled state while the sheet is still loading, then we have to
         // perform three checks:
@@ -80,11 +76,11 @@ void HTMLLinkElement::setDisabledState(bool _disabled)
             // Check #1: If the sheet becomes disabled while it was loading, and if it was either
             // a main sheet or a sheet that was previously enabled via script, then we need
             // to remove it from the list of pending sheets.
-            if (m_disabledState == 2 && (!m_alternate || oldDisabledState == 1))
+            if (m_disabledState == Disabled && (!m_relAttribute.m_isAlternate || oldDisabledState == EnabledViaScript))
                 document()->removePendingSheet();
 
             // Check #2: An alternate sheet becomes enabled while it is still loading.
-            if (m_alternate && m_disabledState == 1)
+            if (m_relAttribute.m_isAlternate && m_disabledState == EnabledViaScript)
                 document()->addPendingSheet();
 
             // Check #3: A main sheet becomes enabled while it was still loading and
@@ -92,7 +88,7 @@ void HTMLLinkElement::setDisabledState(bool _disabled)
             // happen (a double toggle for no reason essentially).  This happens on
             // virtualplastic.net, which manages to do about 12 enable/disables on only 3
             // sheets. :)
-            if (!m_alternate && m_disabledState == 1 && oldDisabledState == 2)
+            if (!m_relAttribute.m_isAlternate && m_disabledState == EnabledViaScript && oldDisabledState == Disabled)
                 document()->addPendingSheet();
 
             // If the sheet is already loading just bail.
@@ -100,7 +96,7 @@ void HTMLLinkElement::setDisabledState(bool _disabled)
         }
 
         // Load the sheet, since it's never been loaded before.
-        if (!m_sheet && m_disabledState == 1)
+        if (!m_sheet && m_disabledState == EnabledViaScript)
             process();
         else
             document()->updateStyleSelector(); // Update the style selector.
@@ -115,7 +111,7 @@ StyleSheet* HTMLLinkElement::sheet() const
 void HTMLLinkElement::parseMappedAttribute(MappedAttribute *attr)
 {
     if (attr->name() == relAttr) {
-        tokenizeRelAttribute(attr->value(), m_isStyleSheet, m_alternate, m_isIcon, m_isDNSPrefetch);
+        tokenizeRelAttribute(attr->value(), m_relAttribute);
         process();
     } else if (attr->name() == hrefAttr) {
         m_url = document()->completeURL(deprecatedParseURL(attr->value()));
@@ -126,9 +122,9 @@ void HTMLLinkElement::parseMappedAttribute(MappedAttribute *attr)
     } else if (attr->name() == mediaAttr) {
         m_media = attr->value().string().lower();
         process();
-    } else if (attr->name() == disabledAttr) {
+    } else if (attr->name() == disabledAttr)
         setDisabledState(!attr->isNull());
-    } else if (attr->name() == onbeforeloadAttr)
+    else if (attr->name() == onbeforeloadAttr)
         setAttributeEventListener(eventNames().beforeloadEvent, createAttributeEventListener(this, attr));
     else {
         if (attr->name() == titleAttr && m_sheet)
@@ -137,21 +133,21 @@ void HTMLLinkElement::parseMappedAttribute(MappedAttribute *attr)
     }
 }
 
-void HTMLLinkElement::tokenizeRelAttribute(const AtomicString& rel, bool& styleSheet, bool& alternate, bool& icon, bool& dnsPrefetch)
+void HTMLLinkElement::tokenizeRelAttribute(const AtomicString& rel, RelAttribute& relAttribute)
 {
-    styleSheet = false;
-    icon = false; 
-    alternate = false;
-    dnsPrefetch = false;
+    relAttribute.m_isStyleSheet = false;
+    relAttribute.m_isIcon = false;
+    relAttribute.m_isAlternate = false;
+    relAttribute.m_isDNSPrefetch = false;
     if (equalIgnoringCase(rel, "stylesheet"))
-        styleSheet = true;
+        relAttribute.m_isStyleSheet = true;
     else if (equalIgnoringCase(rel, "icon") || equalIgnoringCase(rel, "shortcut icon"))
-        icon = true;
+        relAttribute.m_isIcon = true;
     else if (equalIgnoringCase(rel, "dns-prefetch"))
-        dnsPrefetch = true;
+        relAttribute.m_isDNSPrefetch = true;
     else if (equalIgnoringCase(rel, "alternate stylesheet") || equalIgnoringCase(rel, "stylesheet alternate")) {
-        styleSheet = true;
-        alternate = true;
+        relAttribute.m_isStyleSheet = true;
+        relAttribute.m_isAlternate = true;
     } else {
         // Tokenize the rel attribute and set bits based on specific keywords that we find.
         String relString = rel.string();
@@ -161,11 +157,11 @@ void HTMLLinkElement::tokenizeRelAttribute(const AtomicString& rel, bool& styleS
         Vector<String>::const_iterator end = list.end();
         for (Vector<String>::const_iterator it = list.begin(); it != end; ++it) {
             if (equalIgnoringCase(*it, "stylesheet"))
-                styleSheet = true;
+                relAttribute.m_isStyleSheet = true;
             else if (equalIgnoringCase(*it, "alternate"))
-                alternate = true;
+                relAttribute.m_isAlternate = true;
             else if (equalIgnoringCase(*it, "icon"))
-                icon = true;
+                relAttribute.m_isIcon = true;
         }
     }
 }
@@ -179,17 +175,17 @@ void HTMLLinkElement::process()
 
     // IE extension: location of small icon for locationbar / bookmarks
     // We'll record this URL per document, even if we later only use it in top level frames
-    if (m_isIcon && m_url.isValid() && !m_url.isEmpty())
+    if (m_relAttribute.m_isIcon && m_url.isValid() && !m_url.isEmpty())
         document()->setIconURL(m_url.string(), type);
 
-    if (m_isDNSPrefetch && m_url.isValid() && !m_url.isEmpty())
+    if (m_relAttribute.m_isDNSPrefetch && m_url.isValid() && !m_url.isEmpty())
         ResourceHandle::prepareForURL(m_url);
 
     bool acceptIfTypeContainsTextCSS = document()->page() && document()->page()->settings() && document()->page()->settings()->treatsAnyTextCSSLinkAsStylesheet();
 
     // Stylesheet
     // This was buggy and would incorrectly match <link rel="alternate">, which has a different specified meaning. -dwh
-    if (m_disabledState != 2 && (m_isStyleSheet || (acceptIfTypeContainsTextCSS && type.contains("text/css"))) && document()->frame() && m_url.isValid()) {
+    if (m_disabledState != Disabled && (m_relAttribute.m_isStyleSheet || (acceptIfTypeContainsTextCSS && type.contains("text/css"))) && document()->frame() && m_url.isValid()) {
         // also, don't load style sheets for standalone documents
         
         String charset = getAttribute(charsetAttr);
@@ -432,10 +428,10 @@ void HTMLLinkElement::addSubresourceAttributeURLs(ListHashSet<KURL>& urls) const
     HTMLElement::addSubresourceAttributeURLs(urls);
 
     // Favicons are handled by a special case in LegacyWebArchive::create()
-    if (m_isIcon)
+    if (m_relAttribute.m_isIcon)
         return;
 
-    if (!m_isStyleSheet)
+    if (!m_relAttribute.m_isStyleSheet)
         return;
     
     // Append the URL of this link element.
